<resources>
    <string name="app_name">Weather Democracy</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="logging_in">Loading..</string>
    <string name="title_activity_insta_home">MainActivity</string>
    <string name="title_activity_majer_home">MainActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and</string>
    <string name="loremview">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining </string>
    <string name="text_about_us">About Us</string>
    <string name="error_user_name">Please enter your name</string>
    <string name="error_password">Please enter your password</string>
    <string name="error_new_password">Please enter your new password</string>
    <string name="error_empty_emailornumber">Please enter your email</string>
    <string name="error_invalide_emailornumber">Please enter valid email</string>
    <string name="error_invalide_password">Please enter minimum 8 characters password.</string>
    <string name="error_invalid_password1">Password must be of minimum 8 characters ,one uppercase character and one special character</string>
    <string name="confirm_password">Password and confirm password do not match</string>
    <string name="error_reset_confirm_password">Password and confirm password must be same</string>
    <string name="image_error">Please select image </string>
    <string name="error_otp">Please enter your code</string>
    <string name="review_error_message">Please type your message</string>
    <string name="rating_error">Please select rating</string>
    <string name="error_confirm_password">Please enter confirm password</string>
    <string name="error_old_password">Please enter your old password</string>
    <string name="error_enter_city">Please enter your city</string>
    <string name="error_msg_network">No internet connection!</string>
    <string name="text_contact_us">Contact Us</string>
    <string name="text_logout">Logout</string>
    <string name="text_notification">Notification</string>
    <string name="text_otp">OTP</string>
    <string name="text_kindly_enter_com">Kindly enter the OTP has been sent to Registered Email ID</string>
    <string name="text_change_email_id">Change Email ID</string>
    <string name="text_code_expires_in_00_25">Code expires in: 00:25</string>
    <string name="text_verify_otp">Verify OTP</string>
    <string name="text_privacy_policy">Privacy Policy</string>
    <string name="text_loremipsum_is_simply">Lorem Ipsum is simply</string>
    <string name="text_remainingessentiall">Remaining Essential</string>
    <string name="txt_davidshaw">david_shaw</string>
    <string name="txt_forgot_password">Forgot Password</string>
    <string name="text_enter_the_registered_email_id_to_reset_the_password">Enter the registered Email ID to reset the password</string>
    <string name="text_reset_password">Reset Password</string>
    <string name="text_select_one_of_this_option_below">Select one of this option below</string>
    <string name="text_user">User</string>
    <string name="text_meteorologists">Meteorologists</string>
    <string name="text_title">Title</string>
    <string name="text_message">Message</string>
    <string name="text_send_alert">Send Alert</string>
    <string name="text_welcome_to_the_weather_forecast">Welcome to the weather Forecast</string>
    <string name="text_sign_up_to_continue">Sign Up to Continue</string>
    <string name="text_name">Name</string>
    <string name="text_password">Password</string>
    <string name="text_select_city">Select City</string>
    <string name="text_upload_a_meteorologist_degree_accreditation_or_certification">Upload a meteorologist degree, Accreditation or certification</string>
    <string name="text_accept_terms_and_condition">Accept Terms and Condition |</string>
    <string name="text_read_more">Read more</string>
    <string name="txt_sign_up">Sign Up</string>
    <string name="text_already_have_an_account">Already have an account</string>
    <string name="text_terms_and_condition">Terms and Condition</string>
    <string name="text_terms_and_conditions">Terms and Conditions</string>
    <string name="text_lorem_ipsum_is_simply">Lorem Ipsum is simply</string>
    <string name="text_lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and</string>
    <string name="text_remaining_essentiall">Remaining Essential</string>
    <string name="text_lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining</string>
    <string name="text_kindly_confirm_email_id_again_by_checking">Kindly confirm Email ID Again by checking</string>
    <string name="text_your_address_attentively">your address attentively.</string>
    <string name="text_da_gm">da****@gm*****</string>
    <string name="text_email_id">Email ID</string>
    <string name="text_send_verification">Send Verification</string>
    <string name="text_follower">Followers</string>
    <string name="text_view_profile">View Profile</string>
    <string name="text_david_gmail_com">David@gmail.com</string>
    <string name="text_12345_67890">12345-67890</string>
    <string name="text_3562_canada_125784">#3562, Canada 125784</string>
    <string name="txt_change_password">Change password</string>
    <string name="text_voting_list">Voting List</string>
    <string name="text_location">Location</string>
    <string name="text_find_location">Find Location</string>
    <string name="text_current">Current</string>
    <string name="text_barcelonaspain">Barcelona, Spain</string>
    <string name="text_search_for_cities">Search for Cities</string>
    <string name="text_metrologist">Metrologist</string>
    <string name="text_my_weather_vote">My Weather Vote</string>
    <string name="text_accuracy_weather_votee">Accuracy Weather Vote</string>
    <string name="text_voting_history">Voting History</string>
    <string name="text_date">Date</string>
    <string name="text_high_low">High / Low</string>
    <string name="text_temp">Temp.</string>
    <string name="text_precipitation">Precipitation</string>
    <string name="text_status">Status</string>
    <string name="text_winner">Winner</string>
    <string name="text_congratulation">Congratulation!</string>
    <string name="text_new_mayor_of_the_xyz_city">New Mayor of the xyz city</string>
    <string name="text_mr_david_shaw">MR. David Shaw</string>
    <string name="text_david_shaw_gmailcom">David_shaw@gmail.com</string>
    <string name="text_last_active_15_may_2021_1430">Last active 15 May 2021, 14:30</string>
    <string name="text_barcelona_spain">Barcelona, Spain</string>
    <string name="text_28_xb0">28°</string>
    <string name="text_sunny_day">Sunny day</string>
    <string name="text_feel_like_32">Feel Like 32</string>
    <string name="text_13kmh">13km/h</string>
    <string name="text_uv3">UV-3</string>
    <string name="text_2">2%</string>
    <string name="text_10">10%</string>
    <string name="text_vote_for_weather">Vote for Weather</string>
    <string name="text_view_votes">View Votes</string>
    <string name="text_tomorrow">Tomorrow</string>
    <string name="text_day_after_tomorrow">Day after tomorrow</string>
    <string name="text_folow">Follow</string>
    <string name="text_search">Search</string>
    <string name="text_followrs">Followers</string>
    <string name="text_followin">Following</string>
    <string name="text_edit_profile">Edit Profile</string>
    <string name="txt_david_shaw_gmail_com">David_shaw@gmail.com</string>
    <string name="txt_last_active_15_may_2021_14_30">Last active 15 May 2021, 14:30</string>
    <string name="skip">Skip</string>
    <string name="allow_your_location">Allow your location</string>
    <string name="allow_app_to_access_this_device">Allow app to access this device</string>
    <string name="location_all_the_time">location all the time.</string>
    <string name="allow_location">Allow Location</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="lorem_ipsum_is_simply">Lorem Ipsum is simply</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s_standard_dummy_text_ever_since_the_1500s_when_an_unknown_printer_took_a_galley_of_type_and_scrambled_it_to_make_a_type_specimen_book_it_has_survived_not_only_five_centuries_but_also_the_leap_into_electronic_typesetting_remaining_essentially_unchanged_it_was_popularised_in_the_1960s_with_the_release_of_letraset_sheets_containing_lorem_ipsum_passages_and">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and</string>
    <string name="remaining_essentiall">Remaining Essentiall</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s_standard_dummy_text_ever_since_the_1500s_when_an_unknown_printer_took_a_galley_of_type_and_scrambled_it_to_make_a_type_specimen_book_it_has_survived_not_only_five_centuries_but_also_the_leap_into_electronic_typesetting_remaining">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining</string>
    <string name="winner">Winner</string>
    <string name="congratulation">Congratulation!</string>
    <string name="new_mayor_of_the_xyz_city">New Mayor of the xyz city</string>
    <string name="mr_david_shaw">MR. David Shaw</string>
    <string name="txt_david_shaw">david_shaw</string>
    <string name="bottom_sheet_option_camera">Use Camera</string>
    <string name="use_gallery">Use Gallery</string>
</resources>