<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activities.PrivacyPolicyActivity">

    <RelativeLayout
        android:id="@+id/relativeprivacypolicy"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backscreenshape">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/toolbaar" />

        <ImageView
            android:id="@+id/imgarrowprivacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/arrowback" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_toRightOf="@+id/imgarrowprivacy"
            android:fontFamily="@font/segoe_ui"
            android:text="@string/privacy_policy"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            app:cardCornerRadius="@dimen/_4sdp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/LoremIpsumissimply_txt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/segoe_ui"
                    android:text="@string/lorem_ipsum_is_simply"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13ssp" />

                <TextView
                    android:id="@+id/LoremIpsumissimply_graph1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/LoremIpsumissimply_txt1"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="@dimen/_25sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:fontFamily="@font/segoe_ui"
                    android:text="@string/lorem"
                    android:textColor="@color/txtclr"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/RemainingEssentiall_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/LoremIpsumissimply_graph1"
                    android:layout_marginLeft="@dimen/_24sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:fontFamily="@font/segoe_ui"
                    android:text="@string/remaining_essentiall"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13ssp" />

                <TextView
                    android:id="@+id/RemainingEssentiallgraph"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/RemainingEssentiall_txt"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:fontFamily="@font/segoe_ui"
                    android:text="@string/loremview"
                    android:textColor="@color/txtclr"
                    android:textSize="@dimen/_12ssp" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</RelativeLayout>