<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backscreenshape"
    tools:context=".activities.WinnerActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@color/contacttoolbar"
        app:titleTextColor="@color/white" />

    <ImageView
        android:id="@+id/imgbackwinner"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_15ssp"
        android:layout_marginTop="@dimen/_13sdp"
        android:src="@drawable/arrowback" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_13sdp"
        android:layout_toRightOf="@+id/imgbackwinner"
        android:fontFamily="@font/segoe_ui"
        android:text="@string/winner"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        app:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center">

            <TextView
                android:id="@+id/congratulation_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_25sdp"
                android:background="@color/toolbaar"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:text="@string/congratulation"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/NewMayorofthexyzcity_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/congratulation_txt"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/new_mayor_of_the_xyz_city"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/winnerimage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/NewMayorofthexyzcity_txt"
                android:layout_marginTop="@dimen/_20sdp"
                android:src="@drawable/winner_image" />

            <TextView
                android:id="@+id/winner_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/winnerimage"
                android:layout_marginLeft="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_25sdp"
                android:background="@color/toolbaar"
                android:gravity="center"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:text="@string/mr_david_shaw"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/winner_name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/txt_david_shaw"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>