<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativetermscondition"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backscreenshape"
    tools:context=".activities.TermsandConditionActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40ssp"
                android:background="@color/toolbaar"
                app:titleTextColor="@color/white" />

            <ImageView
                android:id="@+id/imgtermcondition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/arrowback" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_toRightOf="@+id/imgtermcondition"
                android:fontFamily="@font/segoe_ui"
                android:text="@string/terms_and_conditions"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@+id/toolbar"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                app:cardCornerRadius="@dimen/_4sdp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/LoremIpsumissimply_txt1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_13sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:fontFamily="@font/segoe_ui"
                        android:text="@string/lorem_ipsum_is_simply"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13ssp" />

                    <TextView
                        android:id="@+id/LoremIpsumissimply_graph1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/LoremIpsumissimply_txt1"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="@dimen/_25sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:fontFamily="@font/segoe_ui"
                        android:text="@string/lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s_standard_dummy_text_ever_since_the_1500s_when_an_unknown_printer_took_a_galley_of_type_and_scrambled_it_to_make_a_type_specimen_book_it_has_survived_not_only_five_centuries_but_also_the_leap_into_electronic_typesetting_remaining_essentially_unchanged_it_was_popularised_in_the_1960s_with_the_release_of_letraset_sheets_containing_lorem_ipsum_passages_and"
                        android:textColor="@color/txtclr"
                        android:textSize="@dimen/_12ssp" />

                    <TextView
                        android:id="@+id/RemainingEssentiall_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/LoremIpsumissimply_graph1"
                        android:layout_marginLeft="@dimen/_12sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:fontFamily="@font/segoe_ui"
                        android:text="@string/remaining_essentiall"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13ssp" />

                    <TextView
                        android:id="@+id/RemainingEssentiall_graph"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/RemainingEssentiall_txt"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="@dimen/_25sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:fontFamily="@font/segoe_ui"
                        android:text="@string/lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s_standard_dummy_text_ever_since_the_1500s_when_an_unknown_printer_took_a_galley_of_type_and_scrambled_it_to_make_a_type_specimen_book_it_has_survived_not_only_five_centuries_but_also_the_leap_into_electronic_typesetting_remaining"
                        android:textColor="@color/txtclr"
                        android:textSize="@dimen/_12ssp" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>